<resources>
    <string name="app_name">TrendLog</string>
    <string name="password">Password</string>
    <string name="Email">E-Mail</string>
    <string name="emailHint">YourEmail@domain.com</string>
    <string name="passwordHint">**********</string>
    <string name="loginButton">Login</string>
    <string name="noAccount">Don\'t have an account? Click here!</string>
    <string name="name">Name</string>
    <string name="nameHint">John Doe</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="alreadyMember">Already member? Login here!</string>
    <string name="logout">Logout</string>
</resources>
