<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="registerViewModel"
        type="com.example.trendlog.ui.register.RegisterViewModel" />
</data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.register.Register">

            <TextView
                android:id="@+id/regNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/name"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="@+id/createAccountTV"
                app:layout_constraintTop_toBottomOf="@+id/createAccountTV" />

            <TextView
                android:id="@+id/regEmailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/Email"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/regNameTV"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/regNameTV"
                app:layout_constraintTop_toBottomOf="@+id/regNameTV" />

            <TextView
                android:id="@+id/regPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/password"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/regEmailTV"
                app:layout_constraintTop_toBottomOf="@+id/regEmailTV" />

            <EditText
                android:id="@+id/regNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/nameHint"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="@+id/regNameTV"
                app:layout_constraintTop_toBottomOf="@+id/regNameTV" />

            <EditText
                android:id="@+id/regEmailInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/emailHint"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="@+id/regEmailTV"
                app:layout_constraintTop_toBottomOf="@+id/regEmailTV" />

            <EditText
                android:id="@+id/regPasswordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/regPasswordTV"
                app:layout_constraintTop_toBottomOf="@+id/regPasswordTV"
                app:layout_constraintVertical_bias="0.051" />

            <ImageView
                android:id="@+id/regLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/createAccountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/create_account"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/regLogo"
                app:layout_constraintTop_toBottomOf="@+id/regLogo" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="188dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regPasswordInput" />

            <TextView
                android:id="@+id/haveAccountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyMember"
                android:textStyle="bold"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>